# openlineage-confluent

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  config.example.yaml  create_pptx.py  create_slides.py  docker-compose.yml  openlineage-confluent-deck.html  openlineage-confluent-deck.pptx  pyproject.toml  startup.sh
examples/9-node-pipeline/: README.md  events.json
scripts/: connector-datagen-orders.json  connector-dummy-sink.json  connector-http-sink.json  demo_pipelines_consumer_worker.py  diagnose_catalog.py  diagnose_lineage_api.py  diagnose_real_types.py  flink-enrich-orders.sql  flink-high-value-alerts.sql  flink-medium-risk-orders.sql  producer_consumer_demo.py  provision_20_pipelines.py  provision_demo_pipelines.py  schema-high-value-alerts.avsc  schema-medium-risk-orders.avsc  schema-orders-enriched.avsc  stress_test.py
scripts/e2e_pipeline/: 01_aws_setup.py  02_tableflow_setup.py  run_e2e.sh  spark_job.py
scripts/java_client_demo/: pom.xml
scripts/spark_job/: orders_to_warehouse.py
src/openlineage_confluent/: __init__.py  cli.py  config.py  (+1 more)
tests/: conftest.py  test_client_multi_env.py  test_config_multi_env.py  test_emitter.py  test_failed_namespaces.py  test_kafka_rest_client.py  test_ksql_client.py  test_lineage_graph.py  test_mapper.py  test_metrics_client.py  test_pipeline_generator.py  test_pipeline_hot_reload.py  test_pipeline_loop.py  test_reconcile_state.py  test_review_gaps.py  test_schema_registry_client.py  test_self_managed_connect_client.py  test_state_store.py  test_teardown_sweep.py  test_web_selected_envs.py
web/: server.py
(+18 files in other folders)
